syntax = "proto3";

package proto;

option go_package = "github.com/layer-3/nitewatch/proto";

// CageService defines the gRPC service for managing withdrawals via the Cage component.
service CageService {
  // StartWithdraw initiates a withdrawal request on the blockchain.
  // It corresponds to the 'startWithdraw' function in the ICustody contract.
  rpc StartWithdraw(StartWithdrawRequest) returns (StartWithdrawResponse);
}

// StartWithdrawRequest contains the parameters required to start a withdrawal.
message StartWithdrawRequest {
  // The address of the user initiating the withdrawal (hex string).
  string user_address = 1;
  // The address of the token being withdrawn (hex string). Use address(0) for native ETH.
  string token_address = 2;
  // The amount to withdraw (string representation of uint256).
  string amount = 3;
  // A unique nonce to prevent replay attacks (string representation of uint256).
  string nonce = 4;
}

// StartWithdrawResponse returns the result of the withdrawal initiation.
message StartWithdrawResponse {
  // The unique identifier of the withdrawal generated by the contract (hex string).
  string withdrawal_id = 1;
  // The transaction hash of the initiated withdrawal (hex string).
  string tx_hash = 2;
}
